Altre modifiche build system

--- a/emulator/pom.xml
+++ b/emulator/pom.xml
@@ -40,7 +40,9 @@
           </archive>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
+					</descriptorRefs>
+					<appendAssemblyId>false</appendAssemblyId>
+					<finalName>micro-sim-app</finalName>
         </configuration>
       </plugin>
       
