Iniziato sistema di configurazione. Il codice e' un disastro ma l'idea sembra buona

--- a/emulator/pom.xml
+++ b/emulator/pom.xml
@@ -45,6 +45,7 @@
           <archive>
             <manifest>
               <mainClass>microsim.Main</mainClass>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
             </manifest>
           </archive>
           <descriptorRefs>
